--- a/Twitter.ipynb
+++ b/Twitter.ipynb
@@ -35,7 +35,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "cDRVtLC0KS5S",
-        "outputId": "ba7a51f9-3214-439c-f866-0a8fd2e44120"
+        "outputId": "87160763-ede6-4b8d-c062-35dd023f3eb7"
       },
       "source": [
         "import os\n",
@@ -74,7 +74,7 @@
         "    print(tweet.text)\n",
         "    \n"
       ],
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -87,20 +87,6 @@
             "https://t.co/Ge10yUM2OX\n",
             "Capping the four-part series Fixed Income in Retirement Plan Lineups, the Portfolio Construction and Strategy team… https://t.co/hTzA14yEan\n"
           ]
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "['Investors, look alive! @JHIAdvisors has just launched five new ESG EFTs worth a second look for your portfolio 👀  https://t.co/vuqI5VKYTq',\n",
-              " '#FundFriday read the in-depth review of the rated \\n\\nJanus Henderson Strategic Bond\\n\\nRegister to read the full Fund… https://t.co/vaqxc9SD0k',\n",
-              " \"Catch up with Jenna &amp; John with their latest  podcast;  Global perspectives - no one's listening to the bond market… https://t.co/g2G3QjsFOh\",\n",
-              " 'Janus Henderson, Global Head of Enterprise Data Management: Best Practices in Governance Program\\n\\nFollow this link… https://t.co/DLCtIhfMmI',\n",
-              " 'Jennifer James, Emerging Market Credit Portfolio Manager at Janus Henderson Investors, explores how the People’s Ba… https://t.co/HAz9XtBC0q']"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 1
         }
       ]
     },
@@ -117,13 +103,18 @@
         "                       since=date_since).items(5)\n",
         "\n"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "30fdSSwrKpep"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 205
+        },
+        "id": "30fdSSwrKpep",
+        "outputId": "32fd5173-f963-4de8-d181-fdad6c33b11a"
       },
       "source": [
         "# Collect a list of tweets\n",
@@ -143,13 +134,86 @@
         "tweet_text.head(10)\n",
         "\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>user</th>\n",
+              "      <th>location</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>JHIAdvisors</td>\n",
+              "      <td>Global</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>JHIAdvisors</td>\n",
+              "      <td>Global</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>JHIAdvisors</td>\n",
+              "      <td>Global</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>kalkineau</td>\n",
+              "      <td>Sydney, Australia</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>JHIAdvisors</td>\n",
+              "      <td>Global</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "          user           location\n",
+              "0  JHIAdvisors             Global\n",
+              "1  JHIAdvisors             Global\n",
+              "2  JHIAdvisors             Global\n",
+              "3    kalkineau  Sydney, Australia\n",
+              "4  JHIAdvisors             Global"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "6rYA-Ov7Kpts"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6rYA-Ov7Kpts",
+        "outputId": "1d618623-b329-4eb8-f466-a8f6a5b330cd"
       },
       "source": [
         "new_search = \"janus henderson -filter:retweets\"\n",
@@ -162,8 +226,23 @@
         "all_tweets = [tweet.text for tweet in tweets]\n",
         "all_tweets[:5]"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['Investors, look alive! @JHIAdvisors has just launched five new ESG EFTs worth a second look for your portfolio 👀  https://t.co/vuqI5VKYTq',\n",
+              " '#FundFriday read the in-depth review of the rated \\n\\nJanus Henderson Strategic Bond\\n\\nRegister to read the full Fund… https://t.co/vaqxc9SD0k',\n",
+              " \"Catch up with Jenna &amp; John with their latest  podcast;  Global perspectives - no one's listening to the bond market… https://t.co/g2G3QjsFOh\",\n",
+              " 'Janus Henderson, Global Head of Enterprise Data Management: Best Practices in Governance Program\\n\\nFollow this link… https://t.co/DLCtIhfMmI',\n",
+              " 'Jennifer James, Emerging Market Credit Portfolio Manager at Janus Henderson Investors, explores how the People’s Ba… https://t.co/HAz9XtBC0q']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
     },
     {
       "cell_type": "code",
